feat: getPVZListHandler done, all basic endpoints ready
